# nser-ibvs-drone

./: .gitignore  .gitmodules  CITATION.cff  CONTRIBUTING.md  README.md  eval_v2.py  evaluation_analysis.py  pyproject.toml  requirements-versions.txt  requirements.txt  start_sim.sh  yolo_camera_log.csv
.github/workflows/: ruff_linter.yml  ubuntu.yml
assets/camera_parameters/: intrinsic_matrix_half_size.pkl
assets/environment/: README.md  run_environment_car.sh
auto_follow/controllers/: distiled_network_controller.py  distilled_network_controller.py  distilled_temporal_network_controller.py  eval_distilled_network_controller.py  eval_streaming_controller.py  ibvs_controller.py  ibvs_pose_controller.py  ibvs_splitter_controller.py  simple_follow_controller.py  state_follow_controller.py
auto_follow/detection/: frame_visualizer.py  mask_splitter_ibvs.py  target_tracker.py  yolo_engine.py  yolo_ibvs.py  yolo_pose_ibvs.py
auto_follow/distiled_network/: distil_engine.py  drone_command_regressor.py  drone_command_temporal_regressor.py  temporal_distil_engine.py
auto_follow/evaluation/: eval_inference_multi_trials.py  eval_inference_multi_trials_detailed.py  eval_trials.py  eval_trials_v2.py  evaluate_flops.py  evaluate_inference_time.py  evaluation_memory.py  evaluation_methods.py  ibvs_splitter_run_for_logs.py  statistics_evaluation.py
auto_follow/ibvs/: ibvs_controller.py  ibvs_math_fcn.py
auto_follow/pid/: config.py  filters.py  pid_controller.py
auto_follow/processors/: distiled_network_processor.py  distilled_network_processor.py  distilled_temporal_network_processor.py  eval_distilled_network_processor.py  ibvs_pose_yolo_processor.py  ibvs_splitter_processor.py  ibvs_yolo_processor.py  simple_yolo_processor.py  simple_yolo_segmentation_processor.py  state_processor.py  yolo_depth_processor.py  yolo_ibvs_processor.py  yolo_ibvs_processor_rand.py
auto_follow/simulator/: README.md  process_management.py  process_type.py  sim_config.py  simulation_loop_manager.py  simulation_process.py  simulation_runner.py
auto_follow/splitter/: infer.py  net_mask_splitter.py
auto_follow/utils/: cam_params.py  ibvs_math_fcn.py  load_env_file.py  path_manager.py
auto_follow/visualization/: check_good_stop_points.py  compare_teacher_student.py  eval_v2.py  evaluation_analysis.py  load_data.py  metadata_trajectory_analysis.py  metadata_trajectory_plot_compare_teacher_student.py  statistics_evaluation.py  visualize_distributions.py
camera-parameters/sim-anafi-4k/: cam.txt  intrinsic_matrix.pkl
config/pid/: low_pass_filter.yaml  low_pass_filter_lambda.yaml  pid_forward.yaml  pid_x.yaml  pid_y_lambda.yaml
config/simulator/: bunker-online-4k-config-default.yaml  bunker-online-4k-config-test-down-left-student.yaml  bunker-online-4k-config-test-down-left.yaml  bunker-online-4k-config-test-down-right-student.yaml  bunker-online-4k-config-test-down-right.yaml  bunker-online-4k-config-test-front-small-offset-left-student.yaml  bunker-online-4k-config-test-front-small-offset-left.yaml  bunker-online-4k-config-test-front-small-offset-right-student.yaml  bunker-online-4k-config-test-front-small-offset-right.yaml  bunker-online-4k-config-test-left-student.yaml  bunker-online-4k-config-test-left.yaml  bunker-online-4k-config-test-right-student.yaml  bunker-online-4k-config-test-right.yaml  bunker-online-4k-config-test-up-left-student.yaml  bunker-online-4k-config-test-up-left.yaml  bunker-online-4k-config-test-up-right-student.yaml  bunker-online-4k-config-test-up-right.yaml
docs/: architecture.md  carla_scene_load.md  configuration-reference.md  installation-guide.md  load_custom_env.md  running-experiments.md  scene_load.md
examples/: run_yolo_detection.py
main/: basic_file.py
main/processors/: segmentation_pose_processor.py  yolo_processor.py
main/utils/: path_manager.py
models/: sim_temporal_student_best_model.pth
nser_ibvs_drone/controllers/: distilled_network_controller.py  distilled_temporal_network_controller.py  eval_distilled_network_controller.py  ibvs_controller.py  ibvs_pose_controller.py  ibvs_splitter_controller.py  simple_follow_controller.py  state_follow_controller.py
nser_ibvs_drone/detection/: frame_visualizer.py  mask_splitter_ibvs.py  target_tracker.py  targets.py  yolo_engine.py  yolo_ibvs.py  yolo_pose_ibvs.py
runnable/: ibvs_ellipse.py  ibvs_ellipse__new.py  ibvs_obb.py  run_display.py  run_ibvs.py  run_ibvs_detection.py  run_ibvs_jacobian.py  run_ibvs_pose.py  run_ibvs_seg.py  run_ibvs_splitter.py  run_inference_evaluation.py  run_pbvs_seg.py  run_pose_ibvs.py  run_segmentation_pose.py  run_simple_follow_controller.py  run_simulator_experiments.py  run_state_follow_controller.py  run_statistics_evaluation.py  run_student.py  run_yolo_camera.py  run_yolo_depth.py  run_yolo_detection.py  run_yolo_ibvs.py  run_yolo_ibvs_angle.py  run_yolo_segmentation.py  seg.py
scripts/: README.md  connect_drone_firmware.sh  start_bunker_env.sh  start_carla_env.sh  start_empty_bunker_env.sh
student_train_pipeline/: README.md  dataset_prepare.py  drone_dataset.py  model.py  train_model.py
test/: basic_test.py
tests/: __init__.py  basic_test.py  test_basic.py  test_basic_submodule_imports.py
visualization/: visualizer_tracking.py
(+88 files in other folders)
